ggplot 0.5.7
----------------------------------------

  * str should now work on all objects (thanks to Gabor Grothendieck)
  * coord_map defaults to orientation = c(90, 0, mean(range(y)))
  * coord_map now respects limits set by scales
  * removed useless ticks from coord_map
  * fixed bug in stat_quantile when only drawing a single quantile
  * automatically switch between polylineGrob and segmentsGrob when drawing paths so that setting line type now works properly
  * update(p, theme_bw) and p + theme_bw now work
  * colour and fill legends now look exactly the same (previous colour was missing a grey border)
  * coord_polar() now specifies aspect.ratio by default
  * new function opts() to allow modification of plot options by addition
  * added option to scale_brewer to reverse palette
  * more aesthetic tweaks to polar coordinates
  * fix bug in scatterplot matrix where all scatterplots were transposed!
  * only output bars with > 0 count from stat_bar
  * change default bar border to same colour as fill
  * tweaks to improve display of scatterplot matrix
  * new order aesthetic (currently only for lines/paths) that allows you to control the drawing order
  * fixed bug that prevented you from overriding the default axis expansion
  * make statistics more robust to errors
  * geom_jitter now works correctly with groups and categorical values (was actually a bug in how scale_discrete deals with continuous values)
  * fix bug in geom_abline where slope was ignored
  * stat_smooth returns silently if <2 non-missing data points
  * layers with set parameters will not use mapped aesthetics
  * qplot should now work better within functions
  * added quickplot as an alias of qplot, to avoid confusion with qunif, etc
  * use LazyLoad: false instead of SaveData: true for better future compatability
  * adding data and aesthetics in separate steps should now work
  * scale_identity no longer converts everything to character